re PR preprocessor/19077 (Internal compiler error compiling MPlayer)

2005-02-16  Eric Christopher  <echristo@redhat.com>

	PR preprocessor/19077
	* gcc.dg/cpp/20050215-1.c: New file.

2005-02-16  Eric Christopher  <echristo@redhat.com>

	PR preprocessor/19077
	* cppmacro.c (cpp_macro_definition): Move handling of whitespace
        to PREV_WHITE conditional. Remove overloading of len
        variable.

From-SVN: r95123